# fastapi_project

./: .env  ARCHITECTURE.md  README.md  images.db  pyproject.toml
app/: app.py  db.py  exceptions.py  images.py  schemas.py
app/repositories/: image_repo.py
app/routers/: images.py
app/services/: image_service.py
app/templates/: index.html
